--- a/login.html
+++ b/login.html
@@ -70,6 +70,14 @@
                                 </button>
                             </div>
                         </form>
+
+                        <div class="mt-6">
+                            <p class="text-center text-xs text-gray-500">
+                                By signing in, you agree to our 
+                                <a href="terms.html" class="text-blue-600 hover:text-blue-500">Terms of Service</a> and 
+                                <a href="privacy.html" class="text-blue-600 hover:text-blue-500">Privacy Policy</a>
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
