--- a/html/index.html
+++ b/html/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MediCare Clinic</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
-    <form action="feedback.php" method="POST" class="space-y-6">
 
     <style>
         .hero-gradient {
@@ -425,7 +424,7 @@
             </div>
             
             <div class="max-w-2xl mx-auto">
-                <form id="feedbackForm" class="space-y-6" action="simple_feedback.php" method="POST">
+                <form id="feedbackForm" class="space-y-6" action="../php/feedback.php" method="POST">
                     <div class="grid grid-cols-1 gap-6 sm:grid-cols-2">
                         <div>
                             <label for="name" class="block text-sm font-medium text-gray-700">Full Name</label>
