--- a/html/patient-book.html
+++ b/html/patient-book.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Appointment | MediCare Clinic</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="assets/css/dark-mode.css">
-    <link rel="stylesheet" href="assets/css/responsive-sidebar.css">
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg">
+    <link rel="stylesheet" href="../assets/css/dark-mode.css">
+    <link rel="stylesheet" href="../assets/css/responsive-sidebar.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-    <script src="assets/js/dark-mode.js"></script>
+    <script src="../assets/js/dark-mode.js"></script>
     <style>
         .sidebar {
             transition: all 0.3s;
@@ -127,7 +127,7 @@
             <!-- Booking content -->
             <main class="p-4 sm:px-6 lg:px-8">
                 <div class="bg-white shadow rounded-lg overflow-hidden">
-                    <form id="bookingForm" action="submit-booking.php" method="POST" class="p-6">
+                    <form id="bookingForm" action="../php/submit-booking.php" method="POST" class="p-6">
                         <h2 class="text-lg font-medium text-gray-900 mb-6">Select a doctor and time for your appointment</h2>
                         <!-- Step 1: Select Department -->
                         <div class="mb-8">
@@ -297,7 +297,7 @@
         </div>
     </div>
 
-    <script src="assets/js/mobile-menu.js"></script>
+    <script src="../assets/js/mobile-menu.js"></script>
     <script>
         feather.replace();
     </script>
