--- a/html/register.html
+++ b/html/register.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register | MediCare Clinic</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="https://unpkg.com/feather-icons"></script>
-    <form action="register.php" method="POST" class="space-y-6">
 
     <style>
         .register-bg {
@@ -38,7 +37,7 @@
 
                 <div class="mt-8">
                     <div class="mt-6">
-                        <form action="#" method="POST" class="space-y-6">
+                        <form action="../php/register.php" method="POST" class="space-y-6">
                             <div>
                                 <label for="full-name" class="block text-sm font-medium text-gray-700">Full Name</label>
                                 <div class="mt-1">
