--- a/html/patient-records.html
+++ b/html/patient-records.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medical Records | MediCare Clinic</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="assets/css/dark-mode.css">
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg">
+    <link rel="stylesheet" href="../assets/css/dark-mode.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-    <script src="assets/js/dark-mode.js"></script>
+    <script src="../assets/js/dark-mode.js"></script>
     <style>
         .sidebar { transition: all 0.3s; }
         .sidebar-collapsed { width: 5rem; }
@@ -146,20 +146,8 @@
             </main>
         </div>
     </div>
-    <script>
-        feather.replace();
-        document.querySelector('[data-feather="menu"]').addEventListener('click', function() {
-            const sidebar = document.querySelector('.sidebar');
-            sidebar.classList.toggle('sidebar-collapsed');
-            sidebar.classList.toggle('sidebar-expanded');
-            const mainContent = document.querySelector('.main-content');
-            if (sidebar.classList.contains('sidebar-collapsed')) {
-                mainContent.classList.add('ml-20');
-            } else {
-                mainContent.classList.remove('ml-20');
-            }
-        });
-    </script>
+    <script src="../assets/js/init.js"></script>
+    <script src="../assets/js/sidebar-toggle.js"></script>
 </body>
 </html>
 
