--- a/html/admin-login.html
+++ b/html/admin-login.html
@@ -30,7 +30,7 @@
                         <span class="ml-2 text-xl font-bold text-blue-600">MediCare</span>
                     </div>
                     <h2 class="mt-6 text-3xl font-extrabold text-gray-900">
-                        Doctor's Portal
+                        Administrators Portal
                     </h2>
 
                 </div>
@@ -85,8 +85,8 @@
         <div class="hidden lg:block relative w-0 flex-1 login-bg">
             <div class="absolute inset-0 flex items-center justify-center p-12">
                 <div class="bg-white bg-opacity-90 p-8 rounded-lg max-w-md">
-                    <h3 class="text-2xl font-bold text-gray-900 mb-4">Doctor's Portal</h3>
-                    <p class="text-gray-600 mb-6">Access your medical appointments, and communicate with your patients.
+                    <h3 class="text-2xl font-bold text-gray-900 mb-4">Administrators Portal</h3>
+                    <p class="text-gray-600 mb-6">Access all the medical appointments, and communicate with the doctors.
                     </p>
                     <div class="space-y-4">
                         <div class="flex items-start">
@@ -94,7 +94,7 @@
                                 <i data-feather="check-circle" class="h-5 w-5 text-green-500"></i>
                             </div>
                             <div class="ml-3">
-                                <p class="text-sm text-gray-700">View upcoming appointments</p>
+                                <p class="text-sm text-gray-700">View all upcoming appointments</p>
                             </div>
                         </div>
                         <div class="flex items-start">
@@ -110,7 +110,7 @@
                                 <i data-feather="check-circle" class="h-5 w-5 text-green-500"></i>
                             </div>
                             <div class="ml-3">
-                                <p class="text-sm text-gray-700">Message your doctor</p>
+                                <p class="text-sm text-gray-700">Message your doctors</p>
                             </div>
                         </div>
                     </div>
